# AndroidDemos

./: README.md
BitmapShaderDemo/: README.md
BitmapShaderDemo/app/: build.gradle
BitmapShaderDemo/app/src/androidTest/java/org/lynxz/bitmapshaderdemo/: ApplicationTest.java
BitmapShaderDemo/app/src/main/: AndroidManifest.xml
BitmapShaderDemo/app/src/main/java/org/lynxz/bitmapshaderdemo/: MainActivity.java
BitmapShaderDemo/app/src/main/res/layout/: activity_main.xml
BitmapShaderDemo/app/src/main/res/values/: strings.xml
BitmapShaderDemo/app/src/test/java/org/lynxz/bitmapshaderdemo/: ExampleUnitTest.java
ExplandableListViewDemo/: README.md
HelloJniApplication/: .gitignore  README.md  build.gradle
HelloJniApplication/app/: CMakeLists.txt  Config.h.in  build.gradle
HelloJniApplication/app/src/MathFunctions/: CMakeLists.txt  MySqrt.cpp
HelloJniApplication/app/src/androidTest/java/org/lynxz/hellojniapplication/: ExampleInstrumentedTest.kt
HelloJniApplication/app/src/main/: AndroidManifest.xml
HelloJniApplication/app/src/main/MyMath/: MySqrt.cpp  MySqrt.h
HelloJniApplication/app/src/main/cpp/: AndroidLog.h  native-lib.cpp
HelloJniApplication/app/src/main/java/org/lynxz/hellojniapplication/: MainActivity.kt
HelloJniApplication/app/src/main/res/values/: strings.xml
HelloJniApplication/app/src/test/java/org/lynxz/hellojniapplication/: ExampleUnitTest.kt
HelloJniApplication/config/: dependencies.gradle
HelloJniApplication/gradle/wrapper/: gradle-wrapper.properties
ImageLoaderLibsDemo/: README.md  build.gradle
ImageLoaderLibsDemo/app/: build.gradle
ImageLoaderLibsDemo/app/src/androidTest/java/org/lynxz/imageloaderlibsdemo/: ExampleInstrumentedTest.kt
ImageLoaderLibsDemo/app/src/main/: AndroidManifest.xml
ImageLoaderLibsDemo/app/src/main/java/org/lynxz/imageloaderlibsdemo/: MainActivity.kt  MyApplication.kt
ImageLoaderLibsDemo/app/src/main/res/layout/: activity_main.xml
ImageLoaderLibsDemo/app/src/main/res/values/: strings.xml
ImageLoaderLibsDemo/app/src/test/java/org/lynxz/imageloaderlibsdemo/: ExampleUnitTest.kt
ImageLoaderLibsDemo/gradle/wrapper/: gradle-wrapper.properties
ListDemos/: README.md  build.gradle
ListDemos/app/: build.gradle
ListDemos/app/src/androidTest/java/org/lynxz/listdemos/: ApplicationTest.java
ListDemos/app/src/main/: AndroidManifest.xml
ListDemos/app/src/main/java/org/lynxz/listdemos/: BaseActivity.java  GridViewBasicActivity.java  GridViewInListViewActivity.java  LoadMoreRVActivity.java  MainActivity.java  PopupMenuRvActivity.java  RecycleViewAnimationActivity.java  (+3 more)
ListDemos/app/src/main/res/drawable/: selector_btn.xml  selector_rectangle.xml  selector_text_color.xml  shape_rect_btn_press.xml  shape_rectangle.xml  shape_rectangle_round.xml  shape_rectangle_round_pressed.xml
ListDemos/app/src/main/res/layout/: activity_grid_in_list_view.xml  activity_grid_view_basic.xml  activity_list_demo.xml  activity_load_more_rv.xml  activity_main.xml  activity_popup_menu_rv.xml  activity_recycle_view_animation.xml  activity_recycler_view_demo.xml  activity_rv_header.xml  activity_time_line.xml  content_popup_menu_rv.xml  content_recycle_view_animation.xml  content_rv_header.xml  item_gv_basic.xml  item_gv_in_lv.xml  item_loading.xml  item_lv_grid.xml  item_popup_rv.xml  item_rv.xml  item_rv_grid.xml  item_rv_load_more.xml  item_rv_time_line.xml  popup_rv_demo.xml
ListDemos/app/src/main/res/menu/: gv_in_lv_menu.xml  orientation_menu.xml
ListDemos/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
PopupWindowDemo/: README.md
PopupWindowDemo/app/: build.gradle
PopupWindowDemo/app/src/main/: AndroidManifest.xml
PopupWindowDemo/app/src/main/res/drawable/: shape_bg.xml
PopupWindowDemo/app/src/main/res/layout/: activity_main.xml  item_report_center_course.xml  popup_report_center_choose_page.xml
RecyclerViewDemo/: .gitignore  README.md  build.gradle  gradlew  gradlew.bat
RecyclerViewDemo/app/: build.gradle
RecyclerViewDemo/app/src/main/: AndroidManifest.xml
RecyclerViewDemo/app/src/main/res/layout/: activity_group_title_rv.xml  activity_main.xml  activity_rv.xml  item.xml  item_type_one.xml  item_type_three.xml  item_type_two.xml
RecyclerViewDemo/gradle/wrapper/: gradle-wrapper.properties
RecyclerViewDemo/multitypeadapter/: build.gradle
RecyclerViewDemo/multitypeadapter/src/main/: AndroidManifest.xml
RetrofitDemo/app/: build.gradle
RetrofitDemo/app/src/main/: AndroidManifest.xml
RetrofitDemo/app/src/main/res/layout/: activity_main.xml  content_main.xml
RetrofitDemo/app/src/main/res/values/: strings.xml
RobolectricDemo/: .gitignore  README.MD
RobolectricDemo/app/: build.gradle
RobolectricDemo/app/src/main/: AndroidManifest.xml
RobolectricDemo/app/src/main/res/drawable/: loading_circle.xml  shape_fill.xml
RobolectricDemo/app/src/main/res/layout/: activity_main.xml  activity_second.xml  activity_third.xml  fragmetn_demo.xml  layout_loading.xml
RobolectricDemo/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
RobotiumDemo/: README.md
RobotiumDemo/RobotiumDemo/app/: build.gradle
RobotiumDemo/RobotiumDemo/app/src/main/: AndroidManifest.xml
RobotiumDemo/RobotiumDemo/app/src/main/res/layout/: activity_login.xml  activity_main.xml
RobotiumDemo/RobotiumDemo/app/src/main/res/values/: strings.xml
RobotiumDemo/RobotiumDemoTest/app/: build.gradle
RobotiumDemo/RobotiumDemoTest/app/src/main/: AndroidManifest.xml
RobotiumDemo/RobotiumDemoTest/app/src/main/res/layout/: activity_main.xml
RobotiumDemo/RobotiumDemoTest/app/src/main/res/values/: strings.xml
TabLayouDemo/: README.md
TabLayouDemo/app/src/main/res/layout/: activity_main.xml  fragment_base_tv.xml  view_tab_layout.xml
TabLayoutDemo/app/: build.gradle
TabLayoutDemo/app/src/main/: AndroidManifest.xml
TabLayoutDemo/app/src/main/res/color/: selector_text.xml
TabLayoutDemo/app/src/main/res/drawable/: selector_x.xml  selector_z.xml
TabLayoutDemo/app/src/main/res/layout/: activity_main.xml  view_tab_layout.xml
TabLayoutDemo/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
(+100 files in other folders)
